--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,3 +175,79 @@ button:active {
 }
 
 /* Link Properties */
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 640px){
+    #head{
+        position: absolute;
+        margin: auto;
+        top: 0;
+        background-color: #8D8741;
+    }
+    #myname {
+        font-size: 36px;
+        color: White;
+        background: #8D8741; 
+        height: 75px;
+        line-height: auto;
+        width: 100%;
+        float: left;
+        text-align: center;
+        position: static;
+        margin: 0;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        z-index: 1;
+    }
+    #links{
+        font-size: 20px;
+        color: lightgrey;
+        background: #659DBD;
+        width: 100%;
+        height: 50px;
+        line-height: 50px;
+        float: right;
+        text-align: center;
+        position: static;
+    }
+    #aboutme {
+
+        margin: 0 auto;
+        background: #659DBD;
+        border: solid lightgray;
+        width: 90%;
+        right: 5%;
+        left: 5%;
+        margin-top: 175px;
+        margin-bottom: 100px;
+        border-radius: 15px;
+    }
+    .imgtxt {
+        width: 90%;   
+        margin-left: 5%;
+        margin-right: 5%;
+        float: middle;
+        position: relative;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    .positioning{
+    
+    left: 15px;
+    top: 15px;
+    background-color: #DAAD86;
+    color: white;
+    padding: 15px;
+    font-size: 30px;
+    line-height: 10px;
+    }
+    #img1 {
+    float: left;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-bottom: 10px;
+    height: auto;
+    }
+}
